@@ -28,6 +28,7 @@ version 0.84.05
 	horizon_correction setting reading for K-70
 	astrotracer timer sec setting reading for K-3II
 	K-3II bulb mode bugfix (testing)
+	Restore bulb_timer, astrotracer fields after bulb
 
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
